--- a/bower.json
+++ b/bower.json
@@ -3,5 +3,8 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.3.1"
+  },
+  "dependencies": {
+    "jquery-3.1.0.min": "https://code.jquery.com/jquery-3.1.0.min.js"
   }
 }
